Harmonize PFS type retrieval and improve creating new PFS
